# privatelend-solana

./: Anchor.toml  LICENSE  README.md  package.json
app/src/: arcium-client.ts  index.html
program/: Cargo.toml
program/src/: lib.rs
scripts/: test.ts
