[package]
name = "privatelend"
version = "0.1.0"
description = "Privacy-first DeFi lending on Solana powered by Arcium MXE"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "privatelend"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
anchor-client = "0.29.0"
